--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,21 +12,25 @@
 }
 
 @keyframes changeColor {
-  0% {
+  16.67% {
     background: linear-gradient(to right, #007cf0, #00dfd8);
     box-shadow: 0px 0px 135px 5px #007cf0;
   }
-  50% {
+  33.33% {
     background: linear-gradient(to right, #7928ca, #ff0080);
     box-shadow: 0px 0px 135px 5px #7928ca;
   }
-  100% {
+  83.33% {
     background: linear-gradient(to right, #ff4d4d, #f9cb28);
     box-shadow: 0px 0px 135px 5px #ff4d4d;
+  }
+  100%,
+  0% {
+    background: linear-gradient(to right, #007cf0, #00dfd8);
+    box-shadow: 0px 0px 135px 5px #007cf0;
   }
 }
 
 .button {
   animation: changeColor ease-in 8s infinite;
-  /* Add your button styles here */
 }
